<resources>
    <string name="app_name">El Notizblocko</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="registration">Registration</string>
    <string name="login">Login</string>
    <string name="email">E-Mail</string>
    <string name="create">Create</string>
    <string name="findUser">Name your note</string>
    <string name="addUser">New</string>
    <string name="cancel">Cancel</string>
</resources>
